--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #e0e8ff ;
+  
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: sans-serif;
+}
+
+.img img{
+  width: 100vh;
+}
+
+.card {
+  display: flex;
+  background-color: transparent !important;
+  top: 60px;
+  width: 100%;
+  position: absolute !important;
+  align-items: center;
+  border:none !important;
+
+}
+.card-wrapper{
+  width: 400px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 5px 10px #0000;
+}
+
+.order {
+  color: #414967;
+}
+
+.you {
+
+  color: #a3a7c4;
+}
+
+.top {
+
+  border-radius: 15px;
+}
+
+.change {
+
+  color: #574bc1;
+  font-weight: bold;
+  padding: 10px;
+  align-items: center;
+  margin: 15px;
+}
+
+.plan {
+
+  margin-left: 15px;
+}
+
+.year {
+
+  color: #a3a7c4;
+}
+
+.annual {
+
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  padding: 20px;
+
+
+}
+
+.annuall {
+
+  font-weight: bold;
+}
+
+.cancel {
+
+  color: #a3a7c4;
+}
+
+@media only screen and (max-width: 600px) {
+
+  .card-wrapper{
+    width: 320px;
+    
+  }
+
+
 }
